# des_rep

./: .gitignore  AGENTS.md  CLAUDE.md
backend/: __init__.py  pyproject.toml
backend/module/: __init__.py  config.toml
backend/module/agents/: __init__.py  agents_config.toml  assembler.py  db_agent.py  sessions.py
backend/module/codex_agents/: __init__.py
backend/module/codex_agents/framework/: __init__.py  agent_types.py  assembler.py  sessions.py  utils.py
backend/module/codex_agents/instances/: __init__.py  agents_config.toml  db_agent.py  doc_agent.py  response_agent.py  viz_agent.py
backend/module/config_handler/: __init__.py  config.py
backend/module/file_handlers/: __init__.py  dispatchers.py  file_handler_test.py  metadata_store.py  sqlite_queue.py  storage.py  validators.py  worker.py
backend/module/logging/: __init__.py  logger.py
backend/module/mcp_servers/csv/: server.py  tools.py
backend/module/mcp_servers/db/: server.py  tools.py
backend/module/mcp_servers/docs/: server.py  tools.py
backend/module/mcp_servers/viz/: server.py  tools.py
backend/module/pipelines/csv/: csv_pipeline.py  csv_pipeline_models.py  csv_pipeline_test.py  csv_pipeline_utils.py
backend/module/pipelines/db/: schema_assembler.py  schema_assembler_models.py  schema_assembler_prompts.py  schema_assembler_test.py  schema_assembler_utils.py
backend/module/pipelines/docs/: __init__.py  document_pipeline.py  document_pipeline_models.py  (+6 more)
backend/module/providers/: __init__.py  document_intelligence.py  embeddings.py  llm.py  oai_agents.py  tests.py
(+10 files in other folders)
